<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Timely</string>
    <string name="nav_home">Home</string>
    <string name="nav_calendar">Calendar View</string>
    <string name="nav_create_pin">Create Pin</string>
    <string name="nav_logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="details">View All</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="in_fingerprint">In Fingerprint</string>
    <string name="in_card">In Card</string>
    <string name="out_fingerprint">Out Fingerprint</string>
    <string name="out_card">Out Card</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="time_logs">Time Logs</string>
    <string name="no_internet">Internet connection unavailable !!</string>
    <string name="no_record_found">No record found !</string>
    <string name="clear">Clear</string>
    <string name="set">Set</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="try_again">Try Again!</string>
    <string name="today">Today,</string>
    <string name="yesterday">Yesterday,</string>
    <string name="today_hours">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="home">Home</string>
    <string name="attendance">Attendance</string>
    <string name="timesheet">Timesheet</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="shifts">Shifts</string>
    <string name="work_time">Work Time:</string>
    <string name="premisis_time">Premisis Time:</string>
    <string name="presents">Presents:</string>
    <string name="absents">Absents:</string>
    <string name="hrs">hrs</string>
    <string name="Holiday">Holiday</string>
    <string name="Absent">Absent</string>
    <string name="emp_code_">Emp Code:</string>
    <string name="email_">Email:</string>
    <string name="unknown">Unknown</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="users">Users</string>

</resources>
