<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/user_profile_grey">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orange_circle"
            android:layout_marginStart="@dimen/dp_70_negative"
            android:layout_marginTop="@dimen/dp_40_negative"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/red_circle"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_105_negative"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orange_circle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_100_negative"
            android:layout_marginBottom="@dimen/dp_30_negative"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/red_circle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_105_negative"/>

    <LinearLayout
            android:id="@+id/llCredentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/dp_36"
            android:orientation="vertical">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:background="@drawable/rect_right_upper_corner_round"
                android:drawablePadding="@dimen/dp_5"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/colorBlack"
                android:singleLine="true"
                android:maxLength="30"
                android:textColorHint="@color/colorBlack"
                android:paddingStart="@dimen/dp_80"
                android:paddingEnd="@dimen/dp_20"
                android:hint="@string/username"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:background="@drawable/rect_right_bottom_corner_round"
                android:drawablePadding="@dimen/dp_5"
                android:maxLength="30"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_15"
                android:paddingStart="@dimen/dp_80"
                android:paddingEnd="@dimen/dp_20"
                android:singleLine="true"
                android:hint="@string/password"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:background="@drawable/rect_right_bottom_corner_round"
                android:drawablePadding="@dimen/dp_5"
                android:maxLength="30"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_15"
                android:paddingStart="@dimen/dp_80"
                android:paddingEnd="@dimen/dp_20"
                android:singleLine="true"
                android:hint="@string/password"
        android:visibility="invisible"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/circle"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_arrow_forward_24dp"/>
    </RelativeLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_below="@id/llCredentials"
            android:gravity="end"
            android:layout_marginTop="@dimen/dp_15"
            android:textStyle="bold"
            android:textColor="@color/switch_thumb"
            android:layout_marginEnd="@dimen/dp_60"
    />

</RelativeLayout>
